--- a/src/components/section/section.scss
+++ b/src/components/section/section.scss
@@ -9,11 +9,12 @@
 
   &__heading {
     margin-bottom: spacer(4);
-    font-size: font-size(4);
+    font-size: font-size(3);
     text-align: center;
+    text-transform: uppercase;
 
     @include bp(10) {
-      font-size: font-size(5);
+      font-size: font-size(4);
     }
   }
 }
