Updates to product list page and handlign images

--- a/src/templates/product.scss
+++ b/src/templates/product.scss
@@ -8,4 +8,8 @@
   display: grid;
   grid-gap: spacer(4);
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+
+  @include bp(20) {
+    grid-template-columns: 4fr 2fr;
+  }
 }
