--- a/src/assets/styles/03-elements/_page.scss
+++ b/src/assets/styles/03-elements/_page.scss
@@ -26,7 +26,7 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 
-body {
+#___gatsby {
   max-width: $max-width;
   margin-right: auto;
   margin-left: auto;
