--- a/src/components/header/menu/menu.scss
+++ b/src/components/header/menu/menu.scss
@@ -20,6 +20,7 @@
   }
 
   &__button {
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -34,6 +35,21 @@
 
     span {
       font-size: font-size(1);
+    }
+
+    .snipcart-total-items {
+      display: flex;
+      position: absolute;
+      right: 20px;
+      bottom: 20px;
+      width: 16px;
+      height: 16px;
+      padding: 5px;
+      justify-content: center;
+      align-items: center;
+      color: white;
+      border-radius: 50%;
+      background-color: color(green);
     }
   }
 }
