--- a/src/components/product-overview/product-overview.scss
+++ b/src/components/product-overview/product-overview.scss
@@ -22,5 +22,14 @@
 
   &__in-stock {
     font-size: font-size(1);
+
+    span {
+      display: flex;
+      align-items: center;
+
+      svg {
+        margin-right: spacer(1);
+      }
+    }
   }
 }
