Updates to the models

--- a/src/components/product-overview/product-overview.scss
+++ b/src/components/product-overview/product-overview.scss
@@ -32,4 +32,12 @@
       }
     }
   }
+
+  button {
+    margin-bottom: spacer(1);
+  }
+
+  &__personalisation {
+    font-size: font-size(1);
+  }
 }
