--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -4,11 +4,40 @@
 
 @import '~sassHelpers';
 
-.c-banners {
+.c-banner {
   margin-bottom: spacer(4);
+  height: 125px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: spacer(4) spacer(2);
+  padding-bottom: spacer(4);
+  text-align: center;
+  background-image: url('../../assets/images/banner/1.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
 
-  &__img {
-    width: 100%;
-    height: 100%;
+  &__title,
+  &__info {
+    text-transform: uppercase;
+  }
+
+  &__title {
+    margin-bottom: spacer(2);
+    font-size: font-size(4);
+  }
+
+  @include bp(10) {
+    height: 225px;
+    background-image: url('../../assets/images/banner/2.jpg');
+
+    &__title {
+      font-size: font-size(5);
+    }
+  }
+
+  @include bp(20) {
+    height: 300px;
+    background-image: url('../../assets/images/banner/3.jpg');
   }
 }
