--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -37,6 +37,7 @@
   }
 
   @include bp(20) {
+    margin-bottom: spacer(6);
     height: 300px;
     background-image: url('../../assets/images/banner/3.jpg');
   }
