--- a/src/components/section/section.scss
+++ b/src/components/section/section.scss
@@ -17,4 +17,14 @@
       font-size: font-size(4);
     }
   }
+
+  &--highlight {
+    padding: spacer(4);
+    background-color: lighten(color(brown-light), 18);
+    border-radius: 20px;
+  }
+
+  @include bp(20) {
+    margin-bottom: spacer(6);
+  }
 }
