Added contact us page

--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -16,6 +16,7 @@
   background-image: url('../../assets/images/banner/1.jpg');
   background-size: cover;
   background-repeat: no-repeat;
+  border-radius: 25px;
 
   &__title,
   &__info {
