--- a/src/components/price/price.scss
+++ b/src/components/price/price.scss
@@ -10,4 +10,10 @@
   &--l {
     font-size: font-size(3);
   }
+
+  &__delivery {
+    margin-left: spacer(1);
+    color: color(brown-dark);
+    font-size: font-size(1);
+  }
 }
