--- a/src/components/product-overview/product-overview.scss
+++ b/src/components/product-overview/product-overview.scss
@@ -8,6 +8,7 @@
   &__title {
     margin-bottom: spacer(2);
     font-size: font-size(4);
+    line-height: 1.3;
   }
 
   &__price {
@@ -15,12 +16,16 @@
     font-size: font-size(3);
   }
 
-  &__in-stock,
   &__short-desc {
-    margin-bottom: spacer(4);
+    margin-bottom: spacer(2);
+
+    &.last {
+      margin-bottom: spacer(4);
+    }
   }
 
   &__in-stock {
+    margin-bottom: spacer(3);
     font-size: font-size(1);
 
     span {
