--- a/src/components/product-specs/product-specs.scss
+++ b/src/components/product-specs/product-specs.scss
@@ -8,20 +8,20 @@
   dt,
   dd {
     display: inline-block;
-    margin-bottom: spacer(1);
+    margin-bottom: spacer(2);
   }
 
   dt {
-    width: 100px;
+    width: 140px;
   }
 
   dd {
     color: color(yellow-dark);
-    width: calc(100% - 100px);
-  }
+    width: calc(100% - 140px);
+    vertical-align: top;
 
-  dd:after {
-    content: '\A';
-    white-space: pre;
+    span {
+      display: block;
+    }
   }
 }
