Updates to packages adn imports

--- a/src/assets/styles/01-helpers/tools/mixins/mixins.scss
+++ b/src/assets/styles/01-helpers/tools/mixins/mixins.scss
@@ -3,6 +3,7 @@
 // ========================================================================
 
 @import 'breakpoints';
+@import 'container';
 @import 'clearfix';
 @import 'grid-widths';
 @import 'hidden-visually';
