--- a/src/components/sections/image-gallery/image-gallery.scss
+++ b/src/components/sections/image-gallery/image-gallery.scss
@@ -5,6 +5,10 @@
 @import '~sassHelpers';
 
 .c-image-gallery {
+  padding: spacer(2);
+  background-color: white;
+  border: 1px solid black;
+
   &__image-wrap {
     margin-bottom: spacer(2);
   }
@@ -20,15 +24,15 @@
   }
 
   &__thumb {
-    width: 20%;
+    flex: 1;
     margin-bottom: spacer(2);
     padding-left: spacer(2);
 
     button {
       padding: spacer(1);
       background: none;
-      border: 1px solid color(brown-light);
-      border-radius: 4px;
+      border: 1px solid black;
+      border-radius: 2px;
 
       img {
         pointer-events: none;
@@ -42,7 +46,7 @@
     }
 
     &__thumb {
-      width: auto;
+      max-width: 20%;
     }
   }
 }
